# linux-task-manager

./: .clang-format  Dockerfile  Makefile  README.md  docker-compose.yaml
backend/: CMakeLists.txt  Makefile  conanfile.txt
backend/include/api_server/: time.h
backend/include/api_server/data/: datastore.h  types.h
backend/include/api_server/filesystem/: monitor.h  types.h
backend/include/api_server/server/: api.h  responses.h  server.h  types.h
backend/src/: main.cpp
backend/src/filesystem/: monitor.cpp
backend/src/server/: router.cpp  server.cpp
backend/test/server/: test_router.cpp
docker/: Dockerfile  entrypoint.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  index.module.css
frontend/src/components/Memory/: Memory.js  Memory.test.js
frontend/src/components/Overview/: Overview.js  Overview.module.css  Overview.test.js
frontend/src/components/Process/: ListTable.js  ProcessList.js  ProcessList.module.css  ProcessList.test.js  TreeTable.js
frontend/src/components/Processors/: Processors.js  Processors.test.js
frontend/src/components/UI/: Button.js  Button.module.css  Card.js  Card.module.css  FlexTable.js  FlexTable.module.css  MeterBar.js  MeterBar.module.css
frontend/src/config/: config.js
frontend/src/context/: api-context.js  conn-status.js
include/api_server/: logger.h
include/api_server/data/: datastore.h  types.h
include/api_server/server/: api.h  router.h  server.h
src/: main.cpp
src/server/: server.cpp
test/server/: CMakeLists.txt
